--- a/index.html
+++ b/index.html
@@ -26,5 +26,9 @@
             </div>
         </section>
     </div>
+    <script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-auth.js"></script>
+    <script src="./script/firebase.js"></script>
+    <script src="./script/auth.js"></script>
 </body>
 </html>
