--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     </div>
     <script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-auth.js"></script>
-    <script src="./firebase/firebase.js"></script>
-    <script src="./script/auth.js"></script>
+    <script src="./script/firebase.js"></script>
+    <script type="module" src="./script/auth.js"></script>
+    <script type="module" src="./script.js"></script>
 </body>
 </html>
