--- a/pages/home.html
+++ b/pages/home.html
@@ -10,7 +10,7 @@
 <body>
     <divc class="container">
         <nav>
-            <div id="picture-user"></div>
+            <img id="picture-user" src="" alt="imagem do perfil"/>
             <p style="cursor: pointer;" id="name-person">Vitor Mateus</p>
             <ul>
                 <li>
