corrigindo get elemento da pagina do home para poder mostrar os dados

--- a/pages/home.html
+++ b/pages/home.html
@@ -11,7 +11,7 @@
     <divc class="container">
         <nav>
             <img id="picture-user" src="" alt="imagem do perfil"/>
-            <p style="cursor: pointer;" id="name-person">Vitor Mateus</p>
+            <p style="cursor: pointer;" id="name-person">Sem nome</p>
             <ul>
                 <li>
                     add
