adicionando quadro de cadastro de novas leituras

--- a/pages/home.html
+++ b/pages/home.html
@@ -25,10 +25,21 @@
                 <li>
                     Completos
                 </li>
+                <li class="item-nav-selected">
+                    Instruções
+                </li>
             </ul>
         </nav>
         <main>
-
+            <div id="div-register">
+                <div id="div-header-on-register">
+                    <h1>Novo Registro</h1>
+                </div>
+                <input type="text" placeholder="Nome">
+                <input type="number" placeholder="Nº Páginas">
+                <input type="text" placeholder="Link">
+                <button>Add</button>
+            </div>
         </main>
     </div>
     <script type="module" src="./script.js"></script>
