adicionando imagem com o botao de sign out

--- a/pages/home.html
+++ b/pages/home.html
@@ -10,6 +10,7 @@
 <body>
     <divc class="container">
         <nav>
+            <img id="sign-out-icon" src="../assets/images/exit.png" alt="sign out img" />
             <img id="picture-user" src="" alt="imagem do perfil"/>
             <p style="cursor: pointer;" id="name-person">Sem nome</p>
             <ul>
