corrigindo link de redirect apos sign out

--- a/pages/home.html
+++ b/pages/home.html
@@ -26,7 +26,7 @@
                 <li>
                     Completos
                 </li>
-                <li class="item-nav-selected">
+                <li class="item-nav-selected" id="nav-item-instructions">
                     Instruções
                 </li>
             </ul>
